# taruh

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst
