[tool.poetry]
name = "taruh"
version = "0.1.0"
description = "gpu trees made simple"
authors = ["Harshvardhan Baldwa <harshbaldwa@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Parallel Computing",
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
autopep8 = "^2.0.2"
sphinx = "^7.0.1"
esbonio = "^0.16.1"
coverage = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
